# robotframework-aidebug

./: .gitignore  .ignore  README.md  main.py  pyproject.toml  validate_interactable_selectors.robot
.github/workflows/: ci.yml  release.yml
docs/: index.md  research.md
docs/adr/: ADR-001-vscode-agent-debug-tools.md  ADR-002-structured-custom-dap-requests.md  ADR-003-safety-redaction-audit.md  ADR-004-phased-delivery-experiment-led.md  ADR-005-reliability-performance-observability.md  ADR-006-standalone-packaging-and-distribution.md  ADR-007-validation-strategy.md  ADR-008-chat-agent-dual-surface.md  ADR-009-vscode-language-model-tools-first.md  ADR-010-mcp-interoperability-surface.md  ADR-011-chat-participant-orchestration.md  ADR-012-agent-governance-and-safety.md  ADR-013-agent-performance-and-token-budgets.md  ADR-014-chat-agent-compatibility-and-release-strategy.md
docs/ddd/: README.md  chat-agents-commands-and-events.md  chat-agents-context-map.md  chat-agents-domain-model.md  chat-agents-overview.md  chat-agents-use-cases.md  commands-and-events.md  context-map.md  domain-model.md  modes-and-deployment.md  non-functional-requirements.md  use-cases.md
docs/implementation/: ai-debug-cookbook.md  plan.md  (+13 more)
tests/: conftest.py
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  backendClient.js  chatAgents.js  chatParticipant.js  debugAdapterFactory.js  debugLaunchConfig.js  extension.js  journeys.js  languageModelTools.js  mcpProvider.js  package-lock.json  package.json  runtimeStateCache.js  sessionRouter.js  shared.js  staticContext.js  transports.js
(+52 files in other folders)
